--- a/package.json
+++ b/package.json
@@ -29,97 +29,97 @@
   "author": "Kumuni Project",
   "license": "MIT",
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-context-menu": "^2.2.16",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.59.15",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.19",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "axios": "^1.7.7",
+    "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^11.9.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.1",
+    "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "input-otp": "^1.2.4",
-    "jose": "^5.9.3",
-    "jsdom": "^25.0.1",
+    "jose": "^5.2.3",
+    "jsdom": "^24.0.0",
     "jwt-decode": "^4.0.0",
-    "libphonenumber-js": "^1.11.12",
-    "lucide-react": "^0.446.0",
-    "next-themes": "^0.3.0",
+    "libphonenumber-js": "^1.10.60",
+    "lucide-react": "^0.441.0",
+    "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.53.0",
-    "react-native-web": "^0.19.12",
-    "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.26.2",
+    "react-error-boundary": "^4.0.12",
+    "react-hook-form": "^7.48.2",
+    "react-native-web": "^0.19.11",
+    "react-resizable-panels": "^2.0.13",
+    "react-router-dom": "^6.21.1",
     "react-syntax-highlighter": "^15.5.0",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "vaul": "^1.1.1",
-    "zustand": "^4.5.5"
+    "recharts": "^2.10.4",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.0",
+    "vaul": "^0.9.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@biomejs/biome": "^1.8.3",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.19.0",
-    "@typescript-eslint/parser": "^7.19.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@biomejs/biome": "^1.8.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
-    "cspell": "^8.14.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
-    "react-test-renderer": "^18.3.1",
+    "cspell": "^8.6.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^9.0.11",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.32",
+    "react-test-renderer": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
-    "tailwindcss": "^3.4.11",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.6"
+    "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
