--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
+    "vite": "^5.0.12"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
